# need_custom_nodes

./: .gitignore
ComfyUI_StarNodes/: .gitignore  .tracking  CHANGELOG.md  CHANGELOG_2.0.0.md  INSTALL.md  LICENSE  NODES_LIST_V2.md  README.md  RELEASE_NOTES.md  RELEASE_SUMMARY_2.0.0.md  __init__.py  editprompts.json  fluxratios.json  pyproject.toml  requirements.txt  samplersettings.json  star_flux2_conditioner.py  startext.json  styles.json
ComfyUI_StarNodes/grid/: stargridbatchers.py  stargridcomposer.py
ComfyUI_StarNodes/image_tools/: StarAspectVideoRatio.py  StarDivisibleDimension.py  StarImage2Latent.py  StarLatentInput2.py  aspect_ratio.py  aspect_ratio_advanced.py  divisibledimensions.py  star_apply_overlay_depth.py  star_black_white.py  star_detailenhancer.py  star_frame_from_video.py  star_hdr_effects.py  star_highpass.py  star_image_loader_1by1.py  star_image_loop.py  star_latent_ratio_megapixel.py  star_latent_resize.py  star_load_image_plus.py  star_meta_injector.py  star_radial_blur.py  star_random_image_loader.py  star_save_image_plus.py  star_sd_upscale_refiner.py  star_simple_filters.py  star_size_calculator_by_side.py  star_video_loop.py  starlatentinput.py  starupscale.py
ComfyUI_StarNodes/ltx_video/: README.md  __init__.py  loadaudiovaefromcheckpoint.txt  ltx_image_cut.py  star_ltx_video_settings.py  star_ltxv_get_last_frame.py  star_ltxv_load_last_image.py  star_multi_inputs_to_one.py  star_video_joiner.py  starvae_ltxv_load.py  starvae_ltxv_save.py
ComfyUI_StarNodes/misc/: StarFluxFiller.py  StarLora.py  detailstardaemon.py  star_distilled_optimizer_zit.py  star_dynamic_lora.py  star_flux2_condition.py  star_fp8_converter.py  star_fp8_model_patch_loader.py  star_lora_weight_normalizer.py  star_model_packer.py  star_stop_and_go.py  starwilds.py  starwildsadv.py
ComfyUI_StarNodes/music/: __init__.py  acestep_node.py
ComfyUI_StarNodes/qwen/: QwenImageStart.py  star_image_edit_qwen_kontext.py  star_qwen_edit_encoder.py  star_qwen_edit_plus_conditioner.py  (+5 more)
Comfyui_MultiSaveImage/: README.md  __init__.py  pyproject.toml  requirements.txt  rmgb.py
(+222 files in other folders)
