[project]
name = "comfyui_starnodes"
description = "NODES: StarNodes - A Big collection of Custom Nodes for ComfyUI with improvements, image tools and lots of helper nodes"
version = "2.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Starnodes2024/ComfyUI_StarNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "starnodes"
DisplayName = "ComfyUI_StarNodes"
Icon = ""
